# corrosive-engine

./: .gitignore  404.html  Cargo.toml  Cargo.toml3Kkg64  Cargo.tomlOiXCBI  Cargo.tomlZgRrBS  Cargo.tomlj5geO1  LICENSE-PROPRIETARY.md  LICENSE.md  README.md  build.rs  build_debug.log~  packages.html  print.html  project_structure.html  project_structure_for_packages.html  searchindex.js  toc.html  toc.js  what_is_corrosive_engine.html
corrosive-2d/: Cargo.toml  build.rs
corrosive-2d-macro/: Cargo.toml
corrosive-2d-macro/src/: lib.rs
corrosive-2d/assets/shaders/: image2d.wgsl  image2d.wgsl~  sprite2d.wgsl
corrosive-2d/dev-assets/shaders/: sprite.slang
corrosive-2d/src/: lib.rs  lib.rs~  material2d.rs  math2d.rs  mesh2d.rs  mesh2d.rs~  position2d_operations.rs  position2d_operations.rs~
corrosive-2d/src/comp/: mod.rs
corrosive-2d/src/comp/camera2d/: mod.rs  mod.rs~
corrosive-2d/src/comp/material2d/: mod.rs
corrosive-2d/src/comp/rect2d/: mod.rs
corrosive-2d/src/comp/sprite2d/: mod.rs
corrosive-2d/src/task/: mod.rs
corrosive-asset-manager/: Cargo.toml  Cargo.toml~
corrosive-asset-manager-macro/: Cargo.toml  Cargo.toml~
corrosive-asset-manager-macro/src/: lib.rs
corrosive-asset-manager/src/: asset_server.rs  cache_server.rs  lib.rs  save_server.rs
corrosive-asset-manager/src/comp/: mod.rs
corrosive-ecs-core/: Cargo.toml  README.md  build.rs  build.rs~
corrosive-ecs-core-macro/: Cargo.toml  LICENSE.md  README.md
corrosive-ecs-core-macro/docs/: task.md
corrosive-ecs-core-macro/src/: lib.rs
corrosive-ecs-core-macro/src/app/: mod.rs
corrosive-ecs-core-macro/src/component/: mod.rs
corrosive-ecs-core-macro/src/task/: mod.rs
corrosive-ecs-core/src/: arch.rs  build.rs  hierarchy.rs  lib.rs  locked.rs  locked_ref.rs  r_arch.rs  ref.rs  res.rs  reset.rs  signal.rs  state.rs  trigger.rs
corrosive-ecs-renderer-backend/: Cargo.toml  Cargo.tomlh3ETfw  Cargo.toml~
corrosive-ecs-renderer-backend-macro/: Cargo.toml  Cargo.toml~
corrosive-ecs-renderer-backend-macro/src/: lib.rs  lib.rs~
corrosive-ecs-renderer-backend/src/: Color.rs  assets.rs  color.rs  color.rs~  helper.rs  lib.rs  material.rs  material.rs~  public_functions.rs  render_graph.rs  slang.rs
corrosive-ecs-renderer-backend/src/comp/: mod.rs
corrosive-ecs-renderer-backend/src/comp/assets/: mod.rs
corrosive-ecs-renderer-backend/src/helper/: mod.rs
corrosive-ecs-renderer-backend/src/render_graph/: mod.rs
corrosive-ecs-renderer-backend/src/task/: mod.rs  mod.rs~
corrosive-egui/: Cargo.toml  build.rs
corrosive-egui/src/: lib.rs
corrosive-egui/src/comp/: mod.rs
corrosive-egui/src/task/: mod.rs
corrosive-events/: Cargo.toml  Cargo.toml~
corrosive-events/src/: lib.rs  lib.rs~
corrosive-events/src/comp/: mod.rs  mod.rs~
corrosive-events/src/task/: mod.rs  mod.rs~
corrosive-renderer/: Cargo.toml  Cargo.tomljgXc4T  Cargo.tomlqBUn2i  Cargo.tomlxSdY8Z  Cargo.toml~  build.rs  build.rs~
corrosive-renderer/res/: FC2.mtl
corrosive-renderer/src/: lib.rs  lib.rs~  light.wgsl  shader.wgsl  shader.wgsl~
corrosive-renderer/src/camera/: mod.rs
corrosive-renderer/src/comp/: mod.rs  mod.rs~
corrosive-renderer/src/lights/: mod.rs
corrosive-renderer/src/model/: mod.rs
corrosive-renderer/src/task/: mod.rs  mod.rs~
corrosive-ui/: Cargo.toml
corrosive-ui/src/: lib.rs  style.rs  ui-shader.wgsl~
corrosive-ui/src/comp/: mod.rs
corrosive-ui/src/comp/screen/: mod.rs
corrosive-ui/src/task/: mod.rs  ui_shader.wgsl~
corrosive_ecs_core_macro/: Cargo.toml
corrosive_ecs_core_macro/src/: lib.rs
corrosive_ecs_core_macro/src/app/: mod.rs
corrosive_ecs_core_macro/src/task/: mod.rs
dev-assets/: new.slang
docs/: book.toml
docs/src/: SUMMARY.md  packages.md  project_structure.md  project_structure_for_packages.md  what_is_corrosive_engine  what_is_corrosive_engine.md
docs/src/project_structure/: build.rs.md  comp_folder.md  main.rs.md  task_folder.md
docs/src/project_structure_for_packages/: build.rs.md  comp_&_task_folder.md  comp_&_task_folder.md~  lib.rs.md
example-crate/: Cargo.toml  Cargo.toml~  build.rs
example-crate/assets/: new.slang.wgsl
example-crate/src/: main.rs
example-crate/src/.corrosive_engine/: arch_types.rs  auto_prelude.rs  components.json  components_path_map.json  engine.rs  mod.rs  tasks.json  tasks_path_map.json
example-crate/src/comp/: mod.rs
example-crate/src/comp/sub/: mod.rs
example-crate/src/corrosive-components/: arch_types.rs  auto-prelude.rs~  auto_prelude.rs  components.json  components.json~  components_path_map.json  components_path_map.json~  metadata.json~  tasks.json  tasks.json~  test.rs
example-crate/src/task/: mod.rs  mod.rs~
example-crate/src/task/other_tasks/: mod.rs  mod.rs~
example-crate/src/task/other_tasks/other_other_task/: mod.rs  mod.rs~
pixil/: Cargo.toml  Cargo.tomlZYwWn3
pixil/assets/shaders/: clustering.wgsl  directional_shadow_map.wgsl  lights_to_clusters.wgsl  pixil_default_shader.wgsl
pixil/src/: color_palette.rs  helper_functions.rs  lib.rs  light_set.rs  material.rs  mesh.rs  ordered_set.rs  position_operations.rs  render_set.rs  view_data.rs
pixil/src/comp/: mod.rs
pixil/src/comp/camera/: mod.rs
pixil/src/comp/dynamic/: mod.rs
pixil/src/comp/light/: mod.rs
pixil/src/comp/light/directional_light/: mod.rs
pixil/src/comp/position_pixil/: mod.rs
pixil/src/comp/render/: mod.rs
pixil/src/task/renderer/: mod.rs
project_structure/: build.rs.html  comp_folder.html  main.rs.html  task_folder.html
project_structure_for_packages/: build.rs.html  comp_&_task_folder.html  lib.rs.html
src/: build.rs~  core_test.rs  core_test.rs~  main.rs  main.rs~
src/.corrosive_engine/: arch_types.rs  auto_prelude.rs  components.json  engine.rs  mod.rs  tasks.json  tasks_path_map.json
src/comp/: mod.rs
src/components/: mod.rs
src/corrosive-components/: arch_types.rs  components_path_map.json  tasks.json  tasks_path_map.json
src/ext/: mod.rs
src/task/: mod.rs
src/task/other_tasks/: mod.rs
src/task/other_tasks/other_other_task/: mod.rs
src/tasks/: mod.rs  normal_tasks.rs
(+2 files in other folders)
