[workspace]
members = ["corrosive-ecs-core-macro", "corrosive-ecs-core", "corrosive-renderer", "corrosive-ecs-renderer-backend"]

[package]
name = "corrosive-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
corrosive-ecs-core = {path = "corrosive-ecs-core"}
corrosive-ecs-core-macro = {path = "corrosive-ecs-core-macro" }
corrosive-ecs-renderer-backend= {path = "corrosive-ecs-renderer-backend" }
rand = "0.9.0-alpha.2"


[build-dependencies]
corrosive-ecs-core = {path = "corrosive-ecs-core" , features = ["build"]}
corrosive-ecs-core-macro = {path = "corrosive-ecs-core-macro", features = ["build"]}
