[workspace]
members = ["corrosive-ecs-core-macro", "corrosive-ecs-core", "corrosive-renderer", "corrosive-ecs-renderer-backend", "corrosive-ui", "corrosive-asset-manager", "corrosive-asset-manager-macro", "corrosive-2d", "corrosive-ecs-renderer-backend-macro", "corrosive-2d-macro", "corrosive-events", "example-crate", "corrosive-egui", "pixil"]

[package]
name = "corrosive-engine"
version = "0.1.0"
edition = "2021"
license = "GNU AGPLv3 OR LicenseRef-Proprietary"
license-file = "LICENSE.md"

[lib]

[[bin]]
name = "example-crate"
path = "example-crate/src/main.rs"

[dependencies]
corrosive-ecs-core = {path = "corrosive-ecs-core", features = ["all"]}
corrosive-ecs-core-macro = {path = "corrosive-ecs-core-macro" }
corrosive-ecs-renderer-backend= {path = "corrosive-ecs-renderer-backend" }
corrosive-ui= {path = "corrosive-ui" }
corrosive-2d= {path = "corrosive-2d" }
corrosive-asset-manager= {path = "corrosive-asset-manager" }
corrosive-asset-manager-macro= {path = "corrosive-asset-manager-macro" }
corrosive-events= {path = "corrosive-events" }
corrosive-egui= {path = "corrosive-egui" }
pixil = {path = "pixil" }
example-crate= {path = "example-crate" }


[build-dependencies]
corrosive-ecs-core = {path = "corrosive-ecs-core" , features = ["build"]}
corrosive-ecs-core-macro = {path = "corrosive-ecs-core-macro", features = ["build"]}
