[package]
name = "corrosive-2d"
version = "0.1.0"
edition = "2021"

[lib]
[dependencies]
corrosive-ecs-core = { version = "0.1.0", path = "../corrosive-ecs-core" }
corrosive-ecs-core-macro = { version = "0.1.0", path = "../corrosive-ecs-core-macro" }
corrosive-ecs-renderer-backend = {path = "../corrosive-ecs-renderer-backend" }
corrosive-asset-manager = { version = "0.1.0", path = "../corrosive-asset-manager" }
corrosive-asset-manager-macro = { version = "0.1.0", path = "../corrosive-asset-manager-macro" }
bytemuck = "1.21.0"
crossbeam-channel = "0.5.14"
glam = "0.30.3"

[build-dependencies]
corrosive-ecs-core = {path = "../corrosive-ecs-core" , features = ["build"]}
corrosive-asset-manager = { path = "../corrosive-asset-manager", features = ["package"] }
