[package]
name = "corrosive-ecs-core-macro"
version = "0.1.0"
edition = "2021"
description = "Macros for Core Functionality of Corrosive Engine"
license = "AGPL-3.0-only OR LicenseRef-Proprietary"
repository = "https://github.com/Mahdi-Movahedian-Atar/corrosive-engine"
keywords = ["ecs", "game","gamedev", "engine" , "corrosive-engine"]
categories = ["game-engines", "game-development"]
exclude = ["*.rs~"]
license-file = "LICENSE.md"
authors = ["Mahdi Movahedian Atar movahedianatarmahdi@gmail.com"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.91"
quote = "1.0.37"
syn = { version = "2.0.77" ,features = ["full"] }
corrosive-ecs-core = {path = "../corrosive-ecs-core", features = ["build"]}
proc-macro-error = "1.0.4"
[features]
default = ["core"]
all = ["core","build"]
core = []
build = []
