[package]
name = "corrosive-ecs-renderer-backend"
version = "0.1.0"
edition = "2021"
[lib]

[dependencies]
corrosive-ecs-core = { version = "0.1.0", path = "../corrosive-ecs-core" }
corrosive-ecs-core-macro = { version = "0.1.0", path = "../corrosive-ecs-core-macro" }
corrosive-asset-manager = { version = "0.1.0", path = "../corrosive-asset-manager" }
corrosive-asset-manager-macro = { version = "0.1.0", path = "../corrosive-asset-manager-macro" }
env_logger = "0.11.6"
wgpu = "24.0.1"
winit = "0.30.9"
rayon = "1.10.0"
pollster = "0.4.0"
bytemuck = "1.21.0"
reqwest = {version =  "0.12.15",features = ["blocking"] }
zip = "2.6.1"
tar = "0.4.44"
walkdir = "2.5.0"

[build-dependencies]
corrosive-ecs-core = {path = "../corrosive-ecs-core" , features = ["build"]}
