[package]
name = "corrosive-renderer"
version = "0.1.0"
edition = "2021"

[lib]
[dependencies]
corrosive-ecs-core-macro = {path = "../corrosive-ecs-core-macro" }
corrosive-ecs-core = {path = "../corrosive-ecs-core"}
env_logger = "0.11.6"
pollster = "0.4.0"
wgpu = "24.0.1"
winit = "0.30.9"
log = "0.4.22"
bytemuck = { version = "1.21.0", features = [ "derive" ]  }
image = { version = "0.25.5", features = ["png", "jpeg"] }
anyhow = "1.0.95"
nalgebra = "0.33.2"
serde = { version = "1.0.215", features = ["derive"] }
tobj = { version = "4.0.3", default-features = false, features = ["async"]}
fs_extra = "1.3.0"
glob = "0.3.2"
[build-dependencies]
corrosive-ecs-core = {path = "../corrosive-ecs-core" , features = ["build"]}
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"