[package]
name = "corrosive_ecs_core_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.91"
quote = "1.0.37"
syn = { version = "2.0.77" ,features = ["full"] }
corrosive-ecs-core = {path = "../corrosive-ecs-core", features = ["build"]}
[features]
default = ["core"]
all = ["core","build"]
core = []
build = []
